--- a/PaymentsTU/App.xaml
+++ b/PaymentsTU/App.xaml
@@ -4,6 +4,10 @@
              xmlns:local="clr-namespace:PaymentsTU"
              StartupUri="View/MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="View/NavigationImages.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
