--- a/PaymentsTU/View/MainWindow.xaml
+++ b/PaymentsTU/View/MainWindow.xaml
@@ -40,8 +40,7 @@
     <TabControl Name="Tabs" ItemsSource="{Binding Pages}" SelectedIndex="{Binding SelectedTab, Mode=TwoWay}">
         <TabControl.ItemTemplate>
             <DataTemplate>
-                <TextBlock
-                    Text="{Binding Title}" />
+                <TextBlock Text="{Binding Title}" />
             </DataTemplate>
         </TabControl.ItemTemplate>
     </TabControl>
