--- a/PaymentsTU/View/PeriodView.xaml
+++ b/PaymentsTU/View/PeriodView.xaml
@@ -13,13 +13,7 @@
     </UserControl.DataContext>-->
 
     <StackPanel>
-        <StackPanel  VerticalAlignment="Top" Height="23" Orientation="Horizontal" Margin="5,0,5,5" >
-            <Button x:Name="btnAdd" Content="Добавить" Width="100" Margin="0,0,5,0"/>
-            <Button x:Name="btnDelete" Content="Удалить" Width="100" Margin="0,0,5,0"/>
-            <Button x:Name="btnEdit" Content="Редактировать" Width="100" Margin="0,0,5,0"/>
-            <Button x:Name="btnRefresh" Content="Обновить" Width="100"/>
-        </StackPanel>
-        <!--<toolkit:DataGrid ItemsSource="{Binding Items}" IsSynchronizedWithCurrentItem="True"/>-->
+        <local:DataNavigationBar DataContext="{Binding NavigationBar}" Height="30"></local:DataNavigationBar>
         <ListView Name="Directory" ItemsSource="{Binding Items}">
             <ListView.ItemTemplate>
                 <DataTemplate>
