--- a/PaymentsTU/App.xaml
+++ b/PaymentsTU/App.xaml
@@ -2,6 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:PaymentsTU"
+             xmlns:dialogView="clr-namespace:PaymentsTU.Dialogs.DialogView"
              StartupUri="View/MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
