--- a/PaymentsTU/View/DataNavigationBar.xaml
+++ b/PaymentsTU/View/DataNavigationBar.xaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d"
-             d:DesignHeight="30" d:DesignWidth="300">
+             d:DesignHeight="30" d:DesignWidth="300" MaxHeight="30">
     <UserControl.Resources>
         <Style TargetType="{x:Type Image}">
             <Style.Triggers>
@@ -24,10 +24,10 @@
         <Button Width="30" Margin="0,0,1,0" Command="{Binding NewCommand}" Focusable="False">
             <Image Source="{StaticResource AddDrawingImage}"></Image>
         </Button>
-        <Button Width="30" Margin="0,0,1,0" Command="{Binding EditCommand}" Focusable="False">
+        <Button Width="30" Margin="0,0,1,0" Command="{Binding EditCommand}" CommandParameter="{Binding CurrentItem}" Focusable="False">
             <Image Source="{StaticResource EditDrawingImage}"></Image>
         </Button>
-        <Button Width="30" Margin="0,0,1,0" Command="{Binding DeleteCommand}" Focusable="False">
+        <Button Width="30" Margin="0,0,1,0" Command="{Binding DeleteCommand}" CommandParameter="{Binding CurrentItem}" Focusable="False">
             <Image Source="{StaticResource RemoveDrawingImage}"></Image>
         </Button>
         <Button Width="30" Margin="0,0,1,0" Command="{Binding NextCommand}" Focusable="False">
