--- a/PaymentsTU/Dialogs/DialogService/DialogWindow.xaml
+++ b/PaymentsTU/Dialogs/DialogService/DialogWindow.xaml
@@ -6,11 +6,25 @@
         xmlns:local="clr-namespace:PaymentsTU.Dialogs.DialogService"
         xmlns:dialogView="clr-namespace:PaymentsTU.Dialogs.DialogView"
         mc:Ignorable="d"
-        Title="{Binding Title}" Height="300" Width="300"
+        d:DesignHeight="300"
+        d:DesignWidth="300"
+        Title="{Binding Title}" 
         WindowStartupLocation="CenterOwner" SizeToContent="WidthAndHeight" ShowInTaskbar="False" ResizeMode="NoResize">
     <Window.Resources>
         <DataTemplate DataType="{x:Type dialogView:EditEmployeeDialogViewModel}">
             <dialogView:DialogEditRecord></dialogView:DialogEditRecord>
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type dialogView:ConfirmDialogViewModel}">
+            <dialogView:ConfirmDialog></dialogView:ConfirmDialog>
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type dialogView:EditPaymentTypeViewModel}">
+            <dialogView:DialogEditName></dialogView:DialogEditName>
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type dialogView:EditDepartmentViewModel}">
+            <dialogView:DialogEditName></dialogView:DialogEditName>
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type dialogView:DialogPaymentViewModel}">
+            <dialogView:DialogPayment></dialogView:DialogPayment>
         </DataTemplate>
     </Window.Resources>
     <ContentPresenter x:Name="ContentPresenter" Content="{Binding}">
