--- a/PaymentsTU/View/DepartmentView.xaml
+++ b/PaymentsTU/View/DepartmentView.xaml
@@ -6,20 +6,18 @@
              xmlns:toolkit="http://schemas.microsoft.com/wpf/2008/toolkit"
              xmlns:local="clr-namespace:PaymentsTU.View"
              xmlns:viewModel="clr-namespace:PaymentsTU.ViewModel"
+             xmlns:behaviors="clr-namespace:PaymentsTU.Behaviors"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="500">
-    <!--<UserControl.DataContext>
-        <viewModel:DepartmentViewModel></viewModel:DepartmentViewModel>
-    </UserControl.DataContext>-->
 
-    <StackPanel>
-        <local:DataNavigationBar DataContext="{Binding NavigationBar}" Height="30"></local:DataNavigationBar>
-        <ListView Name="Directory" ItemsSource="{Binding Items}" SelectionMode="Single">
+    <DockPanel Name="BasePanel">
+        <local:DataNavigationBar DockPanel.Dock="Top" DataContext="{Binding NavigationBar}" Height="30"></local:DataNavigationBar>
+        <ListView Name="Directory" IsSynchronizedWithCurrentItem="True" ItemsSource="{Binding Items}" IsTabStop="True" SelectionMode="Single" VerticalAlignment="Stretch" behaviors:ScrollIntoViewBehavior.SelectedItem="{Binding ElementName=Directory, Path=SelectedItem}">
             <ListView.ItemTemplate>
                 <DataTemplate>
-                        <TextBlock Text="{Binding Name}" VerticalAlignment="Top" />
+                    <TextBlock Text="{Binding Name}" VerticalAlignment="Top" />
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
-    </StackPanel>
+    </DockPanel>
 </UserControl>
