--- a/PaymentsTU/View/EmployeeView.xaml
+++ b/PaymentsTU/View/EmployeeView.xaml
@@ -4,15 +4,12 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:view="clr-namespace:PaymentsTU.View"
-             xmlns:dialogView="clr-namespace:PaymentsTU.Dialogs.DialogView"
              xmlns:behaviors="clr-namespace:PaymentsTU.Behaviors"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="500">
-    <UserControl.Resources>
-    </UserControl.Resources>
     <DockPanel Name="BasePanel">
         <view:DataNavigationBar DockPanel.Dock="Top" DataContext="{Binding NavigationBar}" Height="30"></view:DataNavigationBar>
-        <ListView Name="Directory" IsSynchronizedWithCurrentItem="True" ItemsSource="{Binding Items}" IsTabStop="True" SelectionMode="Single" VerticalAlignment="Stretch" behaviors:ScrollIntoViewBehavior.SelectedValue="{Binding ElementName=Directory, Path=SelectedValue}">
+        <ListView Name="Directory" IsSynchronizedWithCurrentItem="True" ItemsSource="{Binding Items}" IsTabStop="True" SelectionMode="Single" VerticalAlignment="Stretch" behaviors:ScrollIntoViewBehavior.SelectedItem="{Binding ElementName=Directory, Path=SelectedItem}">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <StackPanel>
