--- a/PaymentsTU/View/MainWindow.xaml
+++ b/PaymentsTU/View/MainWindow.xaml
@@ -22,6 +22,9 @@
         <DataTemplate DataType="{x:Type viewModel:PeriodViewModel}">
             <view:PeriodView />
         </DataTemplate>
+        <DataTemplate DataType="{x:Type viewModel:PaymentTypeViewModel}">
+            <view:TypePaymentView />
+        </DataTemplate>
     </Window.Resources>
     <Window.DataContext>
         <viewModel:MainViewModel/>
