--- a/PaymentsTU/View/PaymentView.xaml
+++ b/PaymentsTU/View/PaymentView.xaml
@@ -12,7 +12,7 @@
 
     <DockPanel Name="BasePanel">
         <local:DataNavigationBar DockPanel.Dock="Top" DataContext="{Binding NavigationBar}" Height="30"></local:DataNavigationBar>
-        <ListView Name="Payments" ItemsSource="{Binding ItemsDataView}">
+        <ListView Name="Payments" ItemsSource="{Binding ItemsDataView, Mode=OneWay}" IsSynchronizedWithCurrentItem="True">
             <ListView.View>
                 <GridView>
                     <GridViewColumn DisplayMemberBinding="{Binding FullName}">
@@ -24,10 +24,10 @@
                     <GridViewColumn DisplayMemberBinding="{Binding Department}">
                         <GridViewColumnHeader Content="Подразделение"></GridViewColumnHeader>
                     </GridViewColumn>
-                    <GridViewColumn DisplayMemberBinding="{Binding DatePayment}">
+                    <GridViewColumn DisplayMemberBinding="{Binding DatePayment, StringFormat=\{0:dd.MM.yyyy\}}">
                         <GridViewColumnHeader Content="Дата выплаты"></GridViewColumnHeader>
                     </GridViewColumn>
-                    <GridViewColumn DisplayMemberBinding="{Binding Value}">
+                    <GridViewColumn DisplayMemberBinding="{Binding Value, StringFormat=\{0:#\,##0.00\}}">
                         <GridViewColumnHeader Content="Сумма"></GridViewColumnHeader>
                     </GridViewColumn>
                     <GridViewColumn DisplayMemberBinding="{Binding Currency}">
