--- a/PaymentsTU/View/MainWindow.xaml
+++ b/PaymentsTU/View/MainWindow.xaml
@@ -5,8 +5,6 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:view="clr-namespace:PaymentsTU.View"
         xmlns:viewModel="clr-namespace:PaymentsTU.ViewModel"
-        xmlns:local="clr-namespace:PaymentsTU"
-        xmlns:dialogView="clr-namespace:PaymentsTU.Dialogs.DialogView"
         mc:Ignorable="d"
         Title="Профсоюзные выплаты" Height="400" Width="800">
     <Window.Resources>
@@ -47,5 +45,11 @@
                 <TextBlock Text="{Binding Title}" />
             </DataTemplate>
         </TabControl.ItemTemplate>
+        <TabControl.ContentTemplate>
+            <DataTemplate>
+                <ContentControl Content="{Binding PageModel.Value, Mode=OneWay}">
+                </ContentControl>
+            </DataTemplate>
+        </TabControl.ContentTemplate>
     </TabControl>
 </Window>
