--- a/PaymentsTU/Dialogs/DialogView/DialogEditName.xaml
+++ b/PaymentsTU/Dialogs/DialogView/DialogEditName.xaml
@@ -6,16 +6,26 @@
              xmlns:local="clr-namespace:PaymentsTU.Dialogs.DialogView"
              xmlns:controls="clr-namespace:PaymentsTU.Controls"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             d:DesignHeight="300" d:DesignWidth="400">
     <StackPanel Margin="4">
-        <controls:LabeledTextBox Label="{Binding RecordTitle}" Text="{Binding RecordData}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="290"/>
-        <StackPanel Margin="2" Orientation="Horizontal" FlowDirection="RightToLeft">
-            <Button Content="Отмена" VerticalAlignment="Top" Width="75" Margin="0, 0, 5, 0"
+        <controls:LabeledTextBox Label="{Binding RecordTitle}" Text="{Binding RecordData}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="392"/>
+        <Grid Margin="0,10,0,0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"></RowDefinition>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"></ColumnDefinition>
+                <ColumnDefinition Width="160"></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <CheckBox Content="Добавить следующую запись" IsChecked="{Binding Path=AddNextRecord}" HorizontalAlignment="Left" VerticalAlignment="Center" TabIndex="6"/>
+            <StackPanel Grid.Column="1" Orientation="Horizontal" FlowDirection="RightToLeft">
+                <Button Content="Отмена" VerticalAlignment="Top" Width="75" Margin="0, 0, 5, 0"
             Command="{Binding CancelCommand}"
-            CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type Window}}}"/>
-            <Button Content="Сохранить" VerticalAlignment="Top" Width="75" Margin="0, 0, 5, 0"
+            CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type Window}}}" TabIndex="8" IsCancel="True"/>
+                <Button Content="Сохранить" VerticalAlignment="Top" Width="75" Margin="0, 0, 5, 0"
             Command="{Binding ApplyCommand}"
-            CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type Window}}}"/>
-        </StackPanel>
+            CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type Window}}}" TabIndex="7" IsDefault="True"/>
+            </StackPanel>
+        </Grid>
     </StackPanel>
 </UserControl>
