--- a/PaymentsTU/Dialogs/DialogView/DialogEditRecord.xaml
+++ b/PaymentsTU/Dialogs/DialogView/DialogEditRecord.xaml
@@ -34,13 +34,23 @@
             <TextBox Name="Note" Text="{Binding Record.Note}" Height="24" IsTabStop="True" TabIndex="4" Focusable="True"/>
         </StackPanel>
         <CheckBox x:Name="RetiredCheckBox" Content="Уволен" IsChecked="{Binding Path=Record.IsFired}" HorizontalAlignment="Left" Margin="0,5,0,0" VerticalAlignment="Top" TabIndex="5"/>
-        <StackPanel Margin="0,10,0,0" Orientation="Horizontal" FlowDirection="RightToLeft">
-            <Button Content="Отмена" VerticalAlignment="Top" Width="75" Margin="0, 0, 5, 0"
+        <Grid Margin="0,10,0,0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"></RowDefinition>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"></ColumnDefinition>
+                <ColumnDefinition Width="160"></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <CheckBox Content="Добавить следующую запись" IsChecked="{Binding Path=AddNextRecord}" HorizontalAlignment="Left" VerticalAlignment="Center" TabIndex="6"/>
+            <StackPanel Grid.Column="1" Orientation="Horizontal" FlowDirection="RightToLeft">
+                <Button Content="Отмена" VerticalAlignment="Top" Width="75" Margin="0, 0, 5, 0"
             Command="{Binding CancelCommand}"
-            CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type Window}}}" TabIndex="7" IsCancel="True"/>
-            <Button Content="Сохранить" VerticalAlignment="Top" Width="75" Margin="0, 0, 5, 0"
+            CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type Window}}}" TabIndex="8" IsCancel="True"/>
+                <Button Content="Сохранить" VerticalAlignment="Top" Width="75" Margin="0, 0, 5, 0"
             Command="{Binding ApplyCommand}"
-            CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type Window}}}" TabIndex="6" IsDefault="True"/>
-        </StackPanel>
+            CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type Window}}}" TabIndex="7" IsDefault="True"/>
+            </StackPanel>
+        </Grid>
     </StackPanel>
 </UserControl>
