--- a/PaymentsTU/Dialogs/DialogView/DialogEditRecord.xaml
+++ b/PaymentsTU/Dialogs/DialogView/DialogEditRecord.xaml
@@ -9,15 +9,15 @@
     <StackPanel Margin="4" FocusManager.FocusedElement="{Binding ElementName=Surname}">
         <StackPanel>
             <TextBlock Text="Фамилия" HorizontalAlignment="Left" VerticalAlignment="Top" />
-            <TextBox Name="Surname" Text="{Binding Record.Surname}" Height="24" IsTabStop="True" TabIndex="0" Focusable="True"/>
+            <TextBox Name="Surname" Text="{Binding Surname, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}" Height="24" IsTabStop="True" TabIndex="0" Focusable="True"/>
         </StackPanel>
         <StackPanel>
             <TextBlock Text="Имя" HorizontalAlignment="Left" VerticalAlignment="Top" />
-            <TextBox Name="Name" Text="{Binding Record.Name}" Height="24" IsTabStop="True" TabIndex="1" Focusable="True"/>
+            <TextBox Name="Name" Text="{Binding Name}" Height="24" IsTabStop="True" TabIndex="1" Focusable="True"/>
         </StackPanel>
         <StackPanel>
             <TextBlock Text="Отчество" HorizontalAlignment="Left" VerticalAlignment="Top" />
-            <TextBox Name="Patronymic" Text="{Binding Record.Patronymic}" Height="24" IsTabStop="True" TabIndex="2" Focusable="True"/>
+            <TextBox Name="Patronymic" Text="{Binding Patronymic}" Height="24" IsTabStop="True" TabIndex="2" Focusable="True"/>
         </StackPanel>
         <TextBlock  Text="Подразделение" HorizontalAlignment="Left" VerticalAlignment="Top" />
         <ComboBox Name="Department"
@@ -26,14 +26,14 @@
                       IsEditable="True"
                       DisplayMemberPath="Name"
                       SelectedValuePath="Id"
-                      SelectedValue="{Binding Path=Record.DepartmentId, Mode=TwoWay}"
+                      SelectedValue="{Binding Path=DepartmentId, Mode=TwoWay}"
                       VerticalAlignment="Top"
                       IsSynchronizedWithCurrentItem="False" TabIndex="3" IsTabStop="True"/>
         <StackPanel>
             <TextBlock Text="Примечание" HorizontalAlignment="Left" VerticalAlignment="Top" />
-            <TextBox Name="Note" Text="{Binding Record.Note}" Height="24" IsTabStop="True" TabIndex="4" Focusable="True"/>
+            <TextBox Name="Note" Text="{Binding Note}" Height="24" IsTabStop="True" TabIndex="4" Focusable="True"/>
         </StackPanel>
-        <CheckBox x:Name="RetiredCheckBox" Content="Уволен" IsChecked="{Binding Path=Record.IsFired}" HorizontalAlignment="Left" Margin="0,5,0,0" VerticalAlignment="Top" TabIndex="5"/>
+        <CheckBox x:Name="RetiredCheckBox" Content="Уволен" IsChecked="{Binding Path=IsFired}" HorizontalAlignment="Left" Margin="0,5,0,0" VerticalAlignment="Top" TabIndex="5"/>
         <Grid Margin="0,10,0,0">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"></RowDefinition>
