--- a/PaymentsTU/App.xaml
+++ b/PaymentsTU/App.xaml
@@ -9,6 +9,58 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="View/NavigationImages.xaml" />
             </ResourceDictionary.MergedDictionaries>
+            <ControlTemplate x:Key="ValidationFailedTemplate">
+                <DockPanel LastChildFill="true">
+                    <AdornedElementPlaceholder Name="customAdorner" VerticalAlignment="Center">
+                        <Border BorderBrush="Red" BorderThickness="1">
+                            <Border.Background>
+                                <VisualBrush AlignmentX="Left" AlignmentY="Center" Stretch="None">
+                                    <VisualBrush.Visual>
+                                        <Label Content="{Binding ElementName=customAdorner,Path=AdornedElement.(Validation.Errors).CurrentItem.ErrorContent}" Foreground="LightGray" />
+                                    </VisualBrush.Visual>
+                                </VisualBrush>
+                            </Border.Background>
+                        </Border>
+                    </AdornedElementPlaceholder>
+                </DockPanel>
+            </ControlTemplate>
+            <!--<Style TargetType="TextBox">
+                <Style.Triggers>
+                    <Trigger Property="Validation.HasError" Value="True">
+                        --><!--<Setter Property="ToolTip"
+                        Value="{Binding RelativeSource={x:Static RelativeSource.Self},
+                        Path=(Validation.Errors).CurrentItem.ErrorContent}"/>-->
+                        <!--<Setter Property="Template">
+                            <Setter.Value>
+                                <ControlTemplate TargetType="{x:Type TextBox}">
+                                    <Grid>
+                                        <ScrollViewer x:Name="PART_ContentHost" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" />
+                                        <TextBlock x:Name="textBlock" Foreground="LightGray" Text="{Binding RelativeSource={x:Static RelativeSource.TemplatedParent},
+                        Path=(Validation.Errors).CurrentItem.ErrorContent}" TextWrapping="Wrap" />
+                                    </Grid>
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>--><!--
+                        <Setter Property="Template">
+                            <Setter.Value>
+                                <ControlTemplate TargetType="{x:Type TextBoxBase}">
+                                    <Border Name="Border">
+                                        <Border.Background>
+                                            <VisualBrush AlignmentX="Left" AlignmentY="Center" Stretch="None">
+                                                <VisualBrush.Visual>
+                                                    <Label Content="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(Validation.Errors).CurrentItem.ErrorContent}" Foreground="LightGray" />
+                                                </VisualBrush.Visual>
+                                            </VisualBrush>
+                                        </Border.Background>
+
+                                        <ScrollViewer Margin="0" x:Name="PART_ContentHost" />
+                                    </Border>
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
+                    </Trigger>
+                </Style.Triggers>
+            </Style>-->
         </ResourceDictionary>
     </Application.Resources>
 </Application>
