--- a/PaymentsTU/App.xaml
+++ b/PaymentsTU/App.xaml
@@ -9,25 +9,31 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="View/NavigationImages.xaml" />
             </ResourceDictionary.MergedDictionaries>
-            <ControlTemplate x:Key="ValidationFailedTemplate">
-                <DockPanel LastChildFill="true">
+            <Style TargetType="{x:Type Control}">
+                <Setter Property="Focusable" Value="False"/>
+            </Style>
+            <!--<ControlTemplate x:Key="ValidationFailedTemplate">
                     <AdornedElementPlaceholder Name="customAdorner" VerticalAlignment="Center">
                         <Border BorderBrush="Red" BorderThickness="1">
                             <Border.Background>
                                 <VisualBrush AlignmentX="Left" AlignmentY="Center" Stretch="None">
                                     <VisualBrush.Visual>
-                                        <Label Content="{Binding ElementName=customAdorner,Path=AdornedElement.(Validation.Errors).CurrentItem.ErrorContent}" Foreground="LightGray" />
+                                        <Label Content="{Binding ElementName=customAdorner,Path=AdornedElement.(Validation.Errors).CurrentItem.ErrorContent}" Foreground="LightGray">
+                                            <Label.Triggers>
+                                                <EventTrigger RoutedEvent="Label.MouseEnter" FocusManager.FocusedElement="{Binding ElementName=customAdorner}">
+                                                </EventTrigger>
+                                            </Label.Triggers>
+                                        </Label>
                                     </VisualBrush.Visual>
                                 </VisualBrush>
                             </Border.Background>
                         </Border>
                     </AdornedElementPlaceholder>
-                </DockPanel>
-            </ControlTemplate>
-            <!--<Style TargetType="TextBox">
+            </ControlTemplate>-->
+            <Style TargetType="TextBox">
                 <Style.Triggers>
                     <Trigger Property="Validation.HasError" Value="True">
-                        --><!--<Setter Property="ToolTip"
+                        <!--<Setter Property="ToolTip"
                         Value="{Binding RelativeSource={x:Static RelativeSource.Self},
                         Path=(Validation.Errors).CurrentItem.ErrorContent}"/>-->
                         <!--<Setter Property="Template">
@@ -40,27 +46,26 @@
                                     </Grid>
                                 </ControlTemplate>
                             </Setter.Value>
-                        </Setter>--><!--
+                        </Setter>-->
                         <Setter Property="Template">
                             <Setter.Value>
                                 <ControlTemplate TargetType="{x:Type TextBoxBase}">
-                                    <Border Name="Border">
+                                    <Border Name="Border" BorderBrush="Red" BorderThickness="1">
                                         <Border.Background>
                                             <VisualBrush AlignmentX="Left" AlignmentY="Center" Stretch="None">
                                                 <VisualBrush.Visual>
-                                                    <Label Content="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(Validation.Errors).CurrentItem.ErrorContent}" Foreground="LightGray" />
+                                                    <Label IsTabStop="False" Content="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(Validation.Errors).CurrentItem.ErrorContent}" Foreground="LightGray" />
                                                 </VisualBrush.Visual>
                                             </VisualBrush>
                                         </Border.Background>
-
-                                        <ScrollViewer Margin="0" x:Name="PART_ContentHost" />
+                                        <ScrollViewer IsTabStop="False" Margin="0" x:Name="PART_ContentHost" />
                                     </Border>
                                 </ControlTemplate>
                             </Setter.Value>
                         </Setter>
                     </Trigger>
                 </Style.Triggers>
-            </Style>-->
+            </Style>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
