--- a/PaymentsTU/Dialogs/DialogView/DialogEditRecord.xaml
+++ b/PaymentsTU/Dialogs/DialogView/DialogEditRecord.xaml
@@ -1,16 +1,16 @@
-﻿<UserControl
+﻿<bt:DialogViewBase
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:p="clr-namespace:PaymentsTU.Dialogs.DialogService"
              x:Class="PaymentsTU.Dialogs.DialogView.DialogEditRecord"
+             xmlns:bt="clr-namespace:PaymentsTU.Dialogs.DialogView"
              mc:Ignorable="d" 
              d:DesignHeight="300" Width="400">
     <StackPanel Margin="4" FocusManager.FocusedElement="{Binding ElementName=Surname}">
         <StackPanel>
             <TextBlock Text="Фамилия" HorizontalAlignment="Left" VerticalAlignment="Top" />
-            <TextBox Name="Surname" Text="{Binding Surname, ValidatesOnDataErrors=True, NotifyOnValidationError=True, UpdateSourceTrigger=PropertyChanged}" Height="24" IsTabStop="True" TabIndex="0" Focusable="True"  Validation.ErrorTemplate="{StaticResource ValidationFailedTemplate}"/>
+            <TextBox Name="Surname" Text="{Binding Surname, ValidatesOnDataErrors=True, NotifyOnValidationError=True, UpdateSourceTrigger=PropertyChanged}" Height="24" IsTabStop="True" TabIndex="0" Focusable="True"/>
         </StackPanel>
         <StackPanel>
             <TextBlock Text="Имя" HorizontalAlignment="Left" VerticalAlignment="Top" />
@@ -48,10 +48,16 @@
                 <Button Content="Отмена" VerticalAlignment="Top" Width="75" Margin="0, 0, 5, 0"
             Command="{Binding CancelCommand}"
             CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type Window}}}" TabIndex="8" IsCancel="True"/>
-                <Button Content="Сохранить" VerticalAlignment="Top" Width="75" Margin="0, 0, 5, 0"
-            Command="{Binding ApplyCommand}"
-            CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type Window}}}" TabIndex="7" IsDefault="True"/>
+                <Button Content="Сохранить"
+                        VerticalAlignment="Top"
+                        Width="75"
+                        Margin="0, 0, 5, 0"
+                        Command="{Binding ApplyCommand}"
+                        CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type Window}}}"
+                        TabIndex="7"
+                        IsDefault="True"
+                        IsEnabled="{Binding IsModelValid}"/>
             </StackPanel>
         </Grid>
     </StackPanel>
-</UserControl>
+</bt:DialogViewBase>
